--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.5.3",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-radio-group": "^1.3.4",
     "@radix-ui/react-select": "^2.2.2",
